@@ -8,7 +8,7 @@
 .\" under the terms of the GNU Free Documentation License, Version 1.2 or
 .\" any later version published by the Free Software Foundation; with no
 .\" Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-.TH MPOP 1 2018-06
+.TH MPOP 1 2018-08
 .SH NAME
 mpop \- A POP3 client
 .SH SYNOPSIS
@@ -253,11 +253,13 @@ considered.
 .br
 The following user / password methods are supported: \fIuser\fP (a simple plain
 text method supported by all servers), \fIplain\fP (another simple plain text
-method, with base64 encoding, supported by almost all servers),
+method, supported by almost all servers),
 \fIscram\-sha\-1\fP (a method that avoids clear-text passwords),
-\fIcram\-md5\fP (an obsolete method that avoids clear-text passwords),
-\fIapop\fP (an obsolete method that avoids clear-text passwords, but is
-vulnerable to man-in-the-middle attacks), \fIdigest\-md5\fP (an overcomplicated
+\fIapop\fP (an obsolete method that avoids clear-text passwords, but is not
+considered secure anymore),
+\fIcram\-md5\fP (an obsolete method that avoids clear-text passwords, but is not
+considered secure anymore),
+\fIdigest\-md5\fP (an overcomplicated
 obsolete method that avoids clear-text passwords, but is not considered secure
 anymore), \fIlogin\fP (a non-standard clear-text method similar to but worse
 than the plain method), \fIntlm\fP (an obscure non-standard method that is now
